--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 
 
 <!-- Le header
-====================================<div class="movingBallLineG">
-</div>
-<div id="movingBallG_1" class="movingBallG">
-</div>============== -->
+================================================== -->
 <header id="overview" class="jumbotron">
     <div class="container">
         <div class="row">
@@ -39,18 +36,9 @@
     </div>
 </header>
 
-<div id="loadingAnimation" ng-show="isLoading">
-    <div id="bowl_ringG">
-        <div class="ball_holderG">
-            <div class="ballG">
-            </div>
-        </div>
-    </div>
-</div>
-
 <!-- Le main
 ================================================== -->
-<div class="container main ng-cloak" ng-controller="FooCtrl" ng-hide="isLoading" ng-cloak>
+<div class="container main ng-cloak" ng-controller="FooCtrl" ng-cloak>
     <div class="row">
         <div class="span3 side">
             <ul class="nav nav-list bs-docs-sidenav">
@@ -75,31 +63,47 @@
                 <hr ng-show="!$last">
             </div>
 
-            <div id="directives" class="bs-docs-section-header">
-                <h1>Directives</h1>
+            <!-- Le loading space
+            ===================== -->
+            <div ng-hide="isLoading">
+                <div id="directives" class="bs-docs-section-header">
+                    <h1>Directives</h1>
 
-                <p class="lead">Dozens of reusable components built to provide your application.</p>
+                    <p class="lead">Dozens of reusable components built to provide your application.</p>
+                </div>
+
+                <div ng-repeat="v in directivesViews">
+                    <div ng-include src="'' + v.fileName + '.html'"></div>
+                    <hr ng-show="!$last">
+                </div>
+
+                <div id="filters" class="bs-docs-section-header">
+                    <h1>Filters</h1>
+
+                    <p class="lead">Some useful filters.</p>
+                </div>
+
+                <div ng-repeat="v in filtersViews">
+                    <div ng-include src="'' + v.fileName + '.html'"></div>
+                    <hr ng-show="!$last">
+                </div>
             </div>
 
-            <div ng-repeat="v in directivesViews">
-                <div ng-include src="'' + v.fileName + '.html'"></div>
-                <hr ng-show="!$last">
-            </div>
-
-            <div id="filters" class="bs-docs-section-header">
-                <h1>Filters</h1>
-
-                <p class="lead">Some useful filters.</p>
-            </div>
-
-            <div ng-repeat="v in filtersViews">
-                <div ng-include src="'' + v.fileName + '.html'"></div>
-                <hr ng-show="!$last">
-            </div>
         </div>
     </div>
 </div>
 
+<!-- Le loading
+================================================== -->
+
+<div id="loadingAnimation" ng-show="isLoading">
+    <div id="bowl_ringG">
+        <div class="ball_holderG">
+            <div class="ballG">
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Le javascript
 ================================================== -->
