--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Test decentralized Angular UI Doc</title>
 
     <!-- Le css -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/cssLoading.css">
-    <link rel="stylesheet" href="css/prettify.css">
+    <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/cssLoading.css">
+    <link rel="stylesheet" href="assets/css/prettify.css">
 
 </head>
 
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="span3">
-                <img src="img/UI_Shield.png" alt="" width="200" height="211" id="bigLogo"/>
+                <img src="assets/img/UI_Shield.png" alt="" width="200" height="211" id="bigLogo"/>
             </div>
             <div class="span9">
 
@@ -107,7 +107,7 @@
 
 <!-- Le javascript
 ================================================== -->
-<script data-main="core/main.js" src="vendor/require.min.js"></script>
+<script data-main="core/main.js" src="assets/vendor/require.min.js"></script>
 
 </body>
 
